Use a separate base path for embed mode instead of ?embed (#15)
This allows us to know during SSR whether the query is from our embedded
iframe, since during SSR we don't have access to query params.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -59,11 +59,17 @@ section.features_src-pages- {
 .embed-mode .navbar,
 .embed-mode .footer,
 .embed-mode .pagination-nav,
-.embed-mode [class^="docSidebarContainer"] {
+.embed-mode article header,
+.embed-mode .hash-link,
+.embed-mode .container > .row > .col {
     display: none;
 }
 
-.embed-mode main .container {
+.embed-mode .container > .row > main.col {
+    display: block;
+}
+
+.embed-mode .container {
     margin: 0;
     max-width: 100%;
 }
