Fix the legibility of the "caution" admonition (#54)
- Changed the code element's background color to be 25% translucent black
- Changed the yellow background color to be orange for more contrast

Before:
![Screen Shot 2021-05-11 at 9 42 15 AM](https://user-images.githubusercontent.com/193881/117950267-4c40d580-b313-11eb-8d6c-77448f8cce44.png)

After:
![Screenshot from 2021-05-12 11-13-33](https://user-images.githubusercontent.com/193881/117950218-40551380-b313-11eb-8c1e-e7542315d4fd.png)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,6 +20,7 @@
     --ifm-color-primary-light: rgb(70, 203, 174);
     --ifm-color-primary-lighter: rgb(102, 212, 189);
     --ifm-color-primary-lightest: rgb(146, 224, 208);
+    --ifm-color-warning: #ff8100;  /* white text on yellow background is hard to read */
 }
 
 .docusaurus-highlight-code-line {
@@ -72,4 +73,9 @@ section.features_src-pages- {
 .embed-mode .container {
     margin: 0;
     max-width: 100%;
+}
+
+.admonition code {
+    color: var(--ifm-alert-color);
+    background-color: rgba(0, 0, 0, 0.25)
 }
