MFLT-3637: Improve nRF SDK docs: include tabs depending on SDK version (#66)
* MFLT-3637: Improve nRF SDK docs: include tabs depending on SDK version

Our nRF Connect SDK guide needed an update for the upcoming SDK version
1.6.0 by Nordic, which [ships with built-in support for Memfault](https://github.com/nrfconnect/sdk-nrf/pull/4670).

It has not been released yet, so maybe it's necessary to hold back on
merging this until then.

Additionally, I've made some other changes:

- Generally reduced drama by changing `:::caution` to `:::important`
  (cautions are orange, "importants" are blue).
- Added a `ProjectAwareCreateAProject` component that will either
  disappear if in `/embed` mode, show the project key if it's available,
  or show what we showed before otherwise ("create a project and get a
  key").

* Prettified Code!

* Change documented memfault SDK location to the new /modules/lib

* Upgrade Docusaurus from 2.0.0-alpha.70 to to 2.0.0-beta.0

It enables the use of explicit heading IDs: https://docusaurus.io/docs/markdown-features/headings#explicit-ids

These are also in the docs for older versions but don't actually work.

* Build with newer Node 12.22.1

* Hide nRF Connect SDK spoilers

Co-authored-by: fnune <fnune@users.noreply.github.com>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -60,7 +60,7 @@ section.features_src-pages- {
 .embed-mode .navbar,
 .embed-mode .footer,
 .embed-mode .pagination-nav,
-.embed-mode article header,
+.embed-mode article header > *:not(h1),
 .embed-mode .hash-link,
 .embed-mode .container > .row > .col {
     display: none;
