--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,8 +11,20 @@
  * work well for content-centric websites.
  */
 
+@font-face {
+    font-family: "Inter var";
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url("/static/binary-assets/Inter-roman.var.woff2") format("woff2");
+}
+
 /* You can override the default Infima variables here. */
 :root {
+    --ifm-font-family-base: Inter var, system-ui, -apple-system, Segoe UI,
+        Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont,
+        "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+        "Segoe UI Emoji", "Segoe UI Symbol";
     --ifm-color-primary: #25c8d4;
     --ifm-color-primary-dark: rgb(33, 175, 144);
     --ifm-color-primary-darker: rgb(31, 165, 136);
