Prompt a yarn cache bust by upgrading prettier (#83)
The DocSearch deployment succeeded (as per Netlify logs) but I can't see
the search widget. I'm wondering whether this can be fixed by rebuilding
the application. The widget not showing up was something that happened a
couple of times locally for me, and busting the cache worked to fix it.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -93,8 +93,8 @@ section.features_src-pages- {
 }
 
 /**
- * Hide the "See all ## results" link at the bottom of the search widget. See
- * the issue linked below for more context.
+ * Hide the "See all ## results" link at the bottom of the search widget.
+ * See the issue linked below for more context.
  *
  * The nested class selector is merely here for specificity. Unfortunately,
  * Docusaurus outputs its own CSS after ours.
