Fix Hubspot colliding with mobile menu (#96)
<table>
<tr>
	<td><img src="https://user-images.githubusercontent.com/56807/129725914-338ebea2-279f-46ec-893c-18bc2313845f.png">
	<td><img src="https://user-images.githubusercontent.com/56807/129725924-e1b9b0e2-11ef-4dc0-9035-78aaef598e73.png">
<tr>
	<td> Before
	<td> After
</table>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -116,3 +116,14 @@ section.features_src-pages- {
     max-width: 100%;
 }
 /* End embed mode rules */
+
+/*
+ * Fix Hubspot colliding with mobile menu in the bottom right corner.
+ * https://community.hubspot.com/t5/HubSpot-Ideas/More-Chat-Widget-Styling-Options/idi-p/13806/page/5#comments
+ */
+@media (max-width: 996px) {
+    div#hubspot-messages-iframe-container {
+        bottom: 80px !important;
+        max-height: calc(100% - 80px) !important;
+    }
+}
