Add Inter-italic var (#129)
This fixes elements styled with `italic` on Chrome (Firefox was doing
some fallback so they rendered as italic but not in Inter font AFAIK).

Update the Inter-roman.var archive to the same version, downloaded from
here:

https://github.com/rsms/inter/releases/download/v3.19/Inter-3.19.zip

This fixes italic elements (eg `<emp>` from Markdown `_ _` tags):

![image](https://user-images.githubusercontent.com/2538614/142246377-83807301-926c-4b2b-b039-0d64637a7571.png)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,6 +19,14 @@
     src: url("/static/binary-assets/Inter-roman.var.woff2") format("woff2");
 }
 
+@font-face {
+    font-family: "Inter var";
+    font-style: italic;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url("/static/binary-assets/Inter-italic.var.woff2") format("woff2");
+}
+
 /* You can override the default Infima variables here. */
 :root {
     --ifm-font-family-base: Inter var, system-ui, -apple-system, Segoe UI,
