--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -17,26 +17,29 @@
     overflow: hidden;
 }
 
-@media screen and (max-width: 966px) {
-    .heroBanner {
-        padding: 2rem;
-    }
-}
-
 .buttons {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.feature {
+    margin-bottom: 1.5rem;
+}
+
 .features {
     display: flex;
     align-items: center;
-    padding: 2rem 0;
+    padding: 2rem 4rem;
     width: 100%;
 }
 
-.featureImage {
-    height: 200px;
-    width: 200px;
+@media screen and (max-width: 966px) {
+    .heroBanner {
+        padding: 2rem;
+    }
+
+    .features {
+        padding: 1rem;
+    }
 }
