Add an "introduction to Memfault" page (#207)
Add an "introduction to Memfault" page

Linked to from the landing page. See the related discussion on Notion:
https://www.notion.so/memfault/Introduction-to-Memfault-0d241204856c433a80d9e28249781782

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -135,3 +135,11 @@ section.features_src-pages- {
         max-height: calc(100% - 80px) !important;
     }
 }
+
+/** When linking to anchors, sometimes they remain hidden by the header. Offset that. */
+.anchor-offset {
+    display: block;
+    position: relative;
+    top: -120px;
+    visibility: hidden;
+}
