Document the upcoming Linux SDK release (#268)
* Document the upcoming Linux SDK release (#268)

- Adds a getting-started guide at
  `/docs/linux/linux-getting-started-guide`.
- Adds two reference pages:
  - `/docs/linux/reference-memfaultd-configuration`
  - `/docs/linux/reference-memfaultd-cli`
- Modifies our OTA release management guide to mention the new Yocto
  possibility.

Deployment preview: https://deploy-preview-268--memfault-docs.netlify.app/docs/linux/linux-getting-started-guide

![image](https://user-images.githubusercontent.com/16181067/181348730-aaab9ef1-feb8-483c-bd89-643e1d7650eb.png)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -143,3 +143,16 @@ section.features_src-pages- {
     top: -120px;
     visibility: hidden;
 }
+
+[role="tabpanel"] {
+    position: relative;
+}
+
+[role="tabpanel"]::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: calc(-1 * var(--ifm-spacing-horizontal));
+    border-left: 1px solid var(--ifm-toc-border-color);
+}
